--- a/bfc.html
+++ b/bfc.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BFC Example</title>
     <style>
-      .container {
+      .contain {
         border: 1px solid black; /* 为了方便观察 */
         overflow: hidden; /* 触发 BFC */
+      }
+
+      .flex-contain {
+        border: 1px solid black;
+        display: flex;
+        flex-direction: column;
       }
 
       .float-box {
@@ -24,17 +30,45 @@
         background-color: lightcoral;
         margin: 10px;
       }
+
+      .fixed-box {
+        position: fixed;
+        width: 100px;
+        height: 100px;
+        background-color: lightcoral;
+        margin: 10px;
+        right: 0;
+      }
+
+      .absolute-box {
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        background-color: lightcoral;
+        margin: 10px;
+        right: 0;
+      }
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="contain">
       <div class="float-box">Float Box 1</div>
       <div class="float-box">Float Box 2</div>
     </div>
 
-    <div class="container">
+    <div class="contain">
       <div class="normal-box">Normal Box 1</div>
       <div class="normal-box">Normal Box 2</div>
+    </div>
+
+    <div class="flex-contain">
+      <div class="normal-box">Normal Box 1</div>
+      <div class="normal-box">Normal Box 2</div>
+    </div>
+
+    <div class="contain" style="position: relative; height: 150px; width: 50vw">
+      <div class="fixed-box">Normal Box 1</div>
+      <div class="absolute-box">Normal Box 2</div>
     </div>
   </body>
 </html>
